# kova

./: CLAUDE.md  Cargo.toml  Info.plist  README.md  build.sh  config.toml  keyboard-shortcuts.md  roadmap.md  track.md
.claude/skills/release/: SKILL.md
assets/: gen_icon.py  kova.icns
docs/: flat-columns-spec.md  image-support.md  ipc.md  split-specs.md
notes/: display-glitches.md  font-fallback-investigation.md  horizontal-scroll-splits.md  multi-window-tab-detach.md  pane-open-perf.md  pty-spawn.md  scrollback-bugs.md  tab-font-size.md  todo_optims.md  vt-parser-batching.md
scripts/: release.sh
shaders/: terminal.metal
src/: app.rs  config.rs  input.rs  ipc.rs  keybindings.rs  main.rs  pane.rs  recent_projects.rs  session.rs  window.rs
src/renderer/: glyph_atlas.rs  mod.rs  pipeline.rs  vertex.rs
src/terminal/: mod.rs  parser.rs  pty.rs
